@@ -16,38 +16,50 @@
 
 package org.skife.jdbi.v2;
 
+import org.skife.jdbi.v2.tweak.ResultSetMapper;
+
 import java.beans.BeanInfo;
 import java.beans.IntrospectionException;
 import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
+import java.util.HashMap;
+import java.util.Date;
+import java.sql.*;
+import java.math.BigDecimal;
 
 /**
  * A result set mapper which maps the fields in a statement into a JavaBean. This uses
  * the JDK's built in bean mapping facilities, so it does not support nested properties.
  */
-public class BeanMapper<T> extends BaseResultSetMapper<T>
+public class BeanMapper<T> implements ResultSetMapper<T>
 {
-    private BeanInfo info;
-    private Class<T> type;
+    private final Class<T> type;
+	private final Map<String, PropertyDescriptor> properties = new HashMap<String, PropertyDescriptor>();
 
-    public BeanMapper(Class<T> type)
+	public BeanMapper(Class<T> type)
     {
         this.type = type;
         try
         {
-            info = Introspector.getBeanInfo(type);
-        }
+            BeanInfo info = Introspector.getBeanInfo(type);
+
+			for (PropertyDescriptor descriptor : info.getPropertyDescriptors())
+			{
+				properties.put(descriptor.getName().toLowerCase(), descriptor);
+			}
+		}
         catch (IntrospectionException e)
         {
             throw new IllegalArgumentException(e);
         }
-    }
+	}
 
-    protected T mapInternal(int index, Map<String, Object> row)
-    {
-        T bean;
+	public T map(int row, ResultSet rs, StatementContext ctx)
+			throws SQLException
+	{
+		T bean;
         try
         {
             bean = type.newInstance();
@@ -58,27 +70,77 @@ public class BeanMapper<T> extends BaseResultSetMapper<T>
                                                              "which was not instantiable", type.getName()),
                                                e);
         }
-        for (PropertyDescriptor descriptor : info.getPropertyDescriptors())
-        {
-            String name = descriptor.getName();
-            if (row.containsKey(name))
-            {
-                try
-                {
-                    descriptor.getWriteMethod().invoke(bean, row.get(name));
-                }
-                catch (IllegalAccessException e)
-                {
-                    throw new IllegalArgumentException(String.format("Unable to access setter for " +
-                                                                     "property, %s", name), e);
-                }
-                catch (InvocationTargetException e)
-                {
-                    throw new IllegalArgumentException(String.format("Invocation target exception trying to " +
-                                                                     "invoker setter for the %s property", name), e);
-                }
-            }
-        }
+
+		ResultSetMetaData metadata = rs.getMetaData();
+
+		for (int i = 1; i <= metadata.getColumnCount(); ++i) {
+			String name = metadata.getColumnName(i).toLowerCase();
+
+			PropertyDescriptor descriptor = properties.get(name);
+
+			if (descriptor != null) {
+				Class type = descriptor.getPropertyType();
+
+				Object value;
+
+				if (type.isAssignableFrom(Boolean.class) || type.isAssignableFrom(boolean.class)) {
+					value = rs.getBoolean(i);
+				}
+				else if (type.isAssignableFrom(Byte.class) || type.isAssignableFrom(byte.class)) {
+					value = rs.getByte(i);
+				}
+				else if (type.isAssignableFrom(Short.class) || type.isAssignableFrom(short.class)) {
+					value = rs.getShort(i);
+				}
+				else if (type.isAssignableFrom(Integer.class) || type.isAssignableFrom(int.class)) {
+					value = rs.getInt(i);
+				}
+				else if (type.isAssignableFrom(Long.class) || type.isAssignableFrom(long.class)) {
+					value = rs.getLong(i);
+				}
+				else if (type.isAssignableFrom(Float.class) || type.isAssignableFrom(float.class)) {
+					value = rs.getFloat(i);
+				}
+				else if (type.isAssignableFrom(Double.class) || type.isAssignableFrom(double.class)) {
+					value = rs.getDouble(i);
+				}
+				else if (type.isAssignableFrom(BigDecimal.class)) {
+					value = rs.getBigDecimal(i);
+				}
+				else if (type.isAssignableFrom(Timestamp.class)) {
+					value = rs.getTimestamp(i);
+				}
+				else if (type.isAssignableFrom(Time.class)) {
+					value = rs.getTime(i);
+				}
+				else if (type.isAssignableFrom(Date.class)) {
+					value = rs.getDate(i);
+				}
+				else if (type.isAssignableFrom(String.class)) {
+					value = rs.getString(i);
+				}
+				else {
+					value = rs.getObject(i);
+				}
+				
+				try
+				{
+					descriptor.getWriteMethod().invoke(bean, value);
+				}
+				catch (IllegalAccessException e)
+				{
+					throw new IllegalArgumentException(String.format("Unable to access setter for " +
+																	 "property, %s", name), e);
+				}
+				catch (InvocationTargetException e)
+				{
+					throw new IllegalArgumentException(String.format("Invocation target exception trying to " +
+																	 "invoker setter for the %s property", name), e);
+				}
+
+			}
+		}
+
         return bean;
-    }
+	}
 }
