@@ -31,7 +31,7 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * Represents a prepared batch statement. That is, a rawSql statement compiled as a prepared
+ * Represents a prepared batch statement. That is, a sql statement compiled as a prepared
  * statement, and then executed multiple times in a single batch. This is, generally,
  * a very efficient way to execute large numbers of the same statement where
  * the statement only varies by the arguments bound to it.
@@ -43,7 +43,7 @@ public class PreparedBatch
     private final StatementRewriter rewriter;
     private final Connection connection;
     private final StatementBuilder preparedStatementCache;
-    private final String rawSql;
+    private final String sql;
     private final StatementContext context = new StatementContext();
 
     PreparedBatch(StatementLocator locator,
@@ -56,7 +56,7 @@ public class PreparedBatch
         this.rewriter = rewriter;
         this.connection = connection;
         this.preparedStatementCache = preparedStatementCache;
-        this.rawSql = sql;
+        this.sql = sql;
     }
 
     /**
@@ -81,13 +81,6 @@ public class PreparedBatch
         if (parts.size() == 0) return new int[]{};
 
         PreparedBatchPart current = parts.get(0);
-        final String sql;
-        try {
-             sql = locator.locate(rawSql, context);
-        }
-        catch (Exception e) {
-            throw new UnableToExecuteStatementException("Exception while trying to locate statement", e);
-        }
         final RewrittenStatement rewritten = rewriter.rewrite(sql, current.getParameters(), context);
         PreparedStatement stmt = null;
         try {
@@ -128,26 +121,24 @@ public class PreparedBatch
      */
     public PreparedBatchPart add()
     {
-        PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, rawSql, context);
+        PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, sql, context);
         parts.add(part);
         return part;
     }
 
-    /**
-     * Create a new batch part by binding properties from <code>bean</code> to
-     * named parameters on the statement
-     *
-     * @param bean JavaBean to lookup properties on
-     *
-     * @return the new batch part
-     */
-    public PreparedBatchPart add(Object bean)
-    {
-        PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, rawSql, context);
-        parts.add(part);
-        part.bindFromProperties(bean);
-        return part;
-    }
+	public PreparedBatch add(Object... args)
+	{
+		PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, sql, context);
+
+		for (int i = 0; i < args.length; ++i) {
+			part.bind(i, args[i]);
+		}
+
+		parts.add(part);
+
+		return this;
+	}
+
 
     /**
      * Create a new batch part by binding values looked up in <code>args</code> to
@@ -159,7 +150,7 @@ public class PreparedBatch
      */
     public PreparedBatchPart add(Map<String, ? extends Object> args)
     {
-        PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, rawSql, context);
+        PreparedBatchPart part = new PreparedBatchPart(this, locator, rewriter, connection, preparedStatementCache, sql, context);
         parts.add(part);
         part.bindFromMap(args);
         return part;
